# aclarai

./: .env.example  .gitignore  Makefile  TRENDING_TOPICS_IMPLEMENTATION.md  conftest.py  docker-compose.yml  launch_ui_test.py  pyproject.toml  run_concept_summary_agent.py  test_import_panel.py  test_integration.py
docs/: README.md
services/aclarai-ui/: Dockerfile  README.md  pyproject.toml
services/aclarai-ui/aclarai_ui/: config.py  config_panel.py  main.py  review_panel.py
services/aclarai-ui/tests/: test_config.py  test_config_panel.py  test_config_panel_integration.py  test_import_panel.py  test_import_panel_integration.py
services/aclarai-ui/util/: import_panel_launcher.py
shared/: pyproject.toml
shared/aclarai_shared/: __init__.py  aclarai.config.default.yaml  config.py  evaluation_thresholds.py  import_system.py  plugin_manager.py  py.typed
shared/aclarai_shared/automation/: pause_controller.py
shared/aclarai_shared/claim_concept_linking/: markdown_updater.py  models.py  neo4j_operations.py  orchestrator.py
shared/aclarai_shared/concept_detection/: detector.py
shared/aclarai_shared/concept_summary_agent/: __init__.py  agent.py
shared/aclarai_shared/embedding/: __init__.py  chunking.py  models.py  storage.py
shared/aclarai_shared/graph/: models.py  neo4j_manager.py
shared/tests/: test_concept_summary_agent.py  test_config.py  test_config_dataclasses.py  test_default_plugin.py  test_evaluation_thresholds.py  test_evaluation_thresholds_integration.py  test_mock_services.py  test_noun_phrase_extraction.py  test_noun_phrase_integration.py  test_plugin_manager.py  test_plugin_manager_integration.py  test_scheduler_config.py  test_tier1_comprehensive.py  test_tier1_import.py  test_tier2_summary.py  test_vault.py
(+174 files in other folders)
