[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aclarai-shared"
version = "0.1.0"
description = "Shared utilities and modules for aclarai services."
dependencies = [
    "python-dotenv>=1.0.0",
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-vector-stores-postgres>=0.2.0",
    "llama-index>=0.12.44",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",
    "neo4j>=5.0.0",
    "tavily-python>=0.7.8",
    "watchdog>=6.0.0",
    "pika>=1.3.2",
    "hnswlib>=0.8.0",
    "spacy>=3.7.0",
    "en-core-web-sm",
    "apscheduler>=3.11.0",
    "scikit-learn>=1.7.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
